<resources>
    <string name="app_name">WATC App Home</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="reporte">Tengo un problema</string>
    <string name="watc">WATC</string>
    <string name="pelea">Pelea</string>
    <string name="Cancelar">Cancelar</string>
    <string name="inclusi_n">Inclusión</string>
    <string name="racismo">Racismo</string>
    <string name="g_nero">Género</string>
    <string name="otro">Otro</string>
    <string name="todo">TODO</string>
    <string name="logo">WATC</string>
</resources>